{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "8f70a096-59cb-4a90-9b6f-063d61c21742",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e85e109f-caa4-4b2d-a242-f0cd31c6b8d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractPrimary",
                    "type": "Button",
                    "id": "79dbbc6e-c1cf-4855-9e59-aaf5f683a240",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9bfe0b4-fc54-4c86-be10-badef0263a5d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "UDLR",
                    "id": "50961641-e208-4a2e-83c6-9f6936609366",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f1410f5a-697b-40e7-9062-6cfbb2d31120",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9847de9f-5e65-45af-b5f3-49e85a86f182",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "832104b6-7ad7-439e-89ef-f040e34c2496",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f9eea8be-5149-48e6-9a12-b240acea3f1f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a0ac7cbf-3bc4-48eb-9ff5-8d7bb732ac4e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}